@@ -60,6 +60,8 @@ Contributions:
 
     * Reuben Sumner -- original HMAC module.
 
+    * Mate Wierdl -- tmda4ezmlm script.
+
 --------------
 ^L
 Local Variables:
