@@ -39,6 +39,12 @@ webmail package.<br><br>
 Mail::Address::Tagged</a> which generates and validates tagged email addresses.
 <br><br>
 
+<li>Mate Wierdl has written 
+<a href="http://mla.libertine.org/tmda-users/200205/msg00216.html"
+TARGET="Resource Window">tmda4ezmlm</a>, a script that sets up TMDA for an 
+ezmlm mailing list.
+<br><br>
+
 <li><a href="http://www.mired.org/consulting.html" TARGET="Resource Window">Mike Meyer</a> 
 commercially supports TMDA, qmail, and many other software packages.
 Remote admin work, as well as e-mail and phone support is available.
