@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Fri May 17 18:54:02 2002 -->
+<!-- Tue May 21 15:43:16 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -168,6 +168,12 @@ webmail package.<br><br>
 <li>Andrew Wilson has written the Perl module 
 <a href="http://search.cpan.org/search?dist=Mail-Address-Tagged" TARGET="Resource Window">
 Mail::Address::Tagged</a> which generates and validates tagged email addresses.
+<br><br>
+
+<li>Mate Wierdl has written 
+<a href="http://mla.libertine.org/tmda-users/200205/msg00216.html"
+TARGET="Resource Window">tmda4ezmlm</a>, a script that sets up TMDA for an 
+ezmlm mailing list.
 <br><br>
 
 <li><a href="http://www.mired.org/consulting.html" TARGET="Resource Window">Mike Meyer</a> 
