@@ -1,3 +1,7 @@
+2002-05-21  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* resources.ht (Links): Link to Mate Wierdl's tmda4ezmlm script.
+	
 2002-05-17  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* resources.ht (Links): Link to Robin Socha's Using Gnus with TMDA
