@@ -1,3 +1,7 @@
+2002-05-21  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* THANKS (Contributions): Add Mate Wierdl.
+
 2002-05-13  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* TMDA 0.55 is released.
